[Code] align search page border and correct the rendering of empty search page (#33378)

--- a/x-pack/plugins/code/public/components/search_page/search.scss
+++ b/x-pack/plugins/code/public/components/search_page/search.scss
@@ -5,3 +5,9 @@
   flex-shrink: 1;
   overflow: auto;
 }
+
+.codeSearchbar__container {
+  height: 3.5rem;
+  padding: $euiSizeS;
+  border-bottom: $euiBorderWidthThin solid $euiBorderColor;
+}
